# loist-mcp-server

./: .bandit  .coverage  .dockerignore  .env.backup  .env.database.bak  .env.database.cloud-sql-backup  .env.gcs-test  .env.staging  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CONTEXT_SIGNED_URL_ISSUE.md  DNS-RECORDS-QUICK-REFERENCE.txt  DNS-SETUP-INSTRUCTIONS.md  Dockerfile  GCS-EMBED-SETUP-GUIDE.md  MANUAL-DEPLOYMENT-GUIDE.md  README-TASK-2.2.md  README.md  TESTING_OEMBED.md  cloudbuild-staging.yaml  cloudbuild.yaml  conftest.py  dashboard.json  deploy_staging_oembed_test.sh  docker-compose.staging.yml  docker-compose.yml  env-config-validation-report.txt  gemini.md  health-uptime-check.json  iam-policy.yaml  mcp.md  mcp_protocol_test_results.json  mcp_resources_results.json  mcp_tools_results.json  oembed-uptime-check.json  pyproject.toml  pytest.ini  ready-uptime-check.json  (+44 more)
.cursor/: mcp.json
.documents/: reference-mcp.md
.taskmaster/: state.json
database/: README.md  __init__.py  cli.py  config.py  migrate.py  operations.py  pool.py  test_queries.sql  utils.py
docs/: a2a-integration-analysis.md  a2a-mvp-implementation-tasks.md  architecture-overview.md  cloud-build-ci-cd-setup.md  cloud-build-triggers.md  cloud-run-deployment.md  cloud-sql-cost-analysis.md  custom-domain-mapping-guide.md  database-best-practices.md  deployment-rollback-procedure.md  deployment-validation-guide.md  deployment-validation-results.md  development-cost-optimization.md  embed-implementation-status.md  embed-player-guide.md  enhanced-social-sharing.md  environment-audit-2025.md  environment-variables.md  exception-handling-guide.md  exception-serialization-improvements.md  frontend-api-integration.md  gcp-service-account-setup.md  gcs-organization-structure.md  github-actions-implementation-summary.md  github-actions-module-import-fix.md  github-actions-setup.md  github-actions-to-cloud-build-migration.md  github-actions-troubleshooting-resolved.md  github-secrets-quick-setup.md  google-cloud-build-setup.md  google-cloud-platform-overview.md  iframe-embedding-troubleshooting.md  local-testing-mcp.md  mcp-resources-api.md  mcp-testing-guide.md  mcp-tool-discovery-fix.md  metadata-fallback-strategy.md  module-organization-guide.md  postgresql-performance-configuration.md  pre-pr-testing-guide.md  (+37 more)
reports/: bandit-scan-20251105-145217.json  (+20 more)
(+225 files in other folders)
